--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="user_option">
-              <a href="">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <span> Login </span>
-              </a>
+              <img src="./Wishme-logo svg.svg" class="wishme_logo" />
+              <button class="login-btn">Login</button>
             </div>
           </div>
         </nav>
@@ -90,10 +88,10 @@
                     <div class="col-md-5">
                       <div class="img-box">
                         <video
-                          src="./video (2160p).mp4"
+                          src="./Remindervideo.mp4"
                           loop
                           autoplay
-                          width="400px"
+                          width="500px"
                           height="400px"
                         ></video>
                       </div>
@@ -358,9 +356,6 @@
             </div>
           </div>
         </div>
-        <div class="btn-box">
-          <a href=""> View All Products </a>
-        </div>
       </div>
     </section>
 
@@ -385,13 +380,12 @@
                 <div class="heading_container">
                   <h2>
                     Make every day <br />
-                    special with us
+                    special with Virtual Gifts
                   </h2>
                 </div>
                 <p></p>
                 <div class="btn-box">
-                  <a href="#" class="btn1"> Buy Now for free </a>
-                  <a href="#" class="btn2"> See More </a>
+                  <a href="#" class="btn1"> See More </a>
                 </div>
               </div>
             </div>
